--- a/src/main/java/react4j/todomvc/public/common/css/index.css
+++ b/src/main/java/react4j/todomvc/public/common/css/index.css
@@ -132,7 +132,7 @@ label[for='toggle-all'] {
 }
 
 .toggle-all:before {
-  content: '❯';
+  content: '\276F';
   font-size: 22px;
   color: #e6e6e6;
   padding: 10px 27px 10px 27px;
@@ -231,7 +231,7 @@ label[for='toggle-all'] {
 }
 
 .todo-list li .destroy:after {
-  content: '×';
+  content: '\00D7';
 }
 
 .todo-list li:hover .destroy {
